@@ -1,3 +1,11 @@
+1999-06-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* protocol.el (methodinfo): New structure.
+	(generate-expanded-methodinfo-list, methodinfo-list-for-phase,
+	count-included-methodinfo-entries, count-method-examples,
+	compare-methodinfo): Use methodinfo structure instead
+	of ad-hoc list.
+
 1999-06-21  Alex Lancaster  <alex@santafe.edu>
 
 	* protocol.el (generic-deprecated-list): For protocol and method
